Facebook review button fix

--- a/business_card.html
+++ b/business_card.html
@@ -232,9 +232,9 @@
   <h3>Leave a Review <img src="images\icons\review.png" alt="review" style="width:35px"> </h3>
   <h6>It will take less than a minute😃</h6>
   <div class="row justify-content-evenly save-contact py-4">
-    <a class="btn btn-light btn-lg col send-review" href="https://g.page/r/Cd2i_GaA_PZrEAo/review" role="button"><img class="review" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
-      <a class="btn btn-light btn-lg col send-review" href="https://www.rate-my-agent.com/malav-panchal-ratings-waterloo-13482/rate" role="button"><img class="review" src="images\rate-my-agent.svg" alt="rate-my-agent-review">⭐⭐⭐⭐⭐</a>
-    <a class="btn btn-light btn-lg col send-review" href="https://www.facebook.com/realtormalav/" role="button"><img class="review" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>  
+    <a class="btn btn-light btn-lg col-5 send-review" href="https://g.page/r/Cd2i_GaA_PZrEAo/review" role="button"><img class="review" src="images\Google-Logo.png" alt="google-review">⭐⭐⭐⭐⭐</a>
+    <a class="btn btn-light btn-lg col-5 send-review" href="https://www.rate-my-agent.com/malav-panchal-ratings-waterloo-13482/rate" role="button"><img class="review" src="images\rate-my-agent.svg" alt="rate-my-agent-review">⭐⭐⭐⭐⭐</a>
+    <a class="btn btn-light btn-lg col-5 mt-4 send-review" href="https://www.facebook.com/realtormalav/" role="button"><img class="review" src="images\Facebook-Logo.png" alt="facebook-review">⭐⭐⭐⭐⭐</a>
   </div>
   </div>
 
