--- a/business_card.html
+++ b/business_card.html
@@ -35,15 +35,13 @@
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- This link is for google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
@@ -52,7 +50,6 @@
 
   <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
 
 
@@ -117,9 +114,37 @@
 
     <div class="row justify-content-evenly save-contact">
       <a class="btn btn-dark btn-lg col-5 bc-button" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
-      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal"
-        data-bs-target="#exampleModal" data-bs-whatever="XXX">CONNECT</button>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Launch demo modal
+      </button>
 
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Say Hi ✋</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+              <script>
+                hbspt.forms.create({
+                  region: "na1",
+                  portalId: "20507752",
+                  formId: "13d54a5b-bebf-4f12-94ed-6c4f3a2754e0"
+                });
+              </script>
+            </div>
+            <!-- <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div> -->
+          </div>
+        </div>
+      </div>
+      <!-- <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal"
+        data-bs-target="#exampleModal" data-bs-whatever="XXX">SEND A MESSAGE</button>
 
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -128,35 +153,17 @@
               <h5 class="modal-title" id="exampleModalLabel">Send me a Message</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-
-            <form action="https://getform.io/f/73d0fac4-c91c-42ae-bace-18a9a2113612" method="POST">
-              <div class="modal-body">
-                <div class="w-40 mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Name</label>
-                  <input type="text" name="name" class="form-control" id="exampleFormControlInput1"
-                    placeholder="Your Name">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                  <input type="email" name="email" class="form-control" id="exampleFormControlInput1"
-                    placeholder="name@example.com">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                  <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="4"
-                    placeholder="Your message..."></textarea>
-                </div>
-              </div>
-
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-danger">Send message</button>
-              </div>
-            </form>
-
+            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+            <script>
+              hbspt.forms.create({
+                region: "na1",
+                portalId: "20507752",
+                formId: "13d54a5b-bebf-4f12-94ed-6c4f3a2754e0"
+              });
+            </script>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <hr>
@@ -247,9 +254,9 @@
     <p class="copyright">© 2022 Malav Panchal.</p>
   </div>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script> -->
+  </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="javascript\wiggle.js" charset="utf-8"></script>
