updated connect button name

--- a/business_card.html
+++ b/business_card.html
@@ -114,13 +114,11 @@
 
     <div class="row justify-content-evenly save-contact">
       <a class="btn btn-dark btn-lg col-5 bc-button" href="images\malav-vcard.vcf" role="button">SAVE CONTACT</a>
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
-      </button>
+      <a class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal" data-bs-target="#connect-modal" role="button">CONNECT</a>
+
 
       <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="connect-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -137,33 +135,9 @@
                 });
               </script>
             </div>
-            <!-- <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div> -->
           </div>
         </div>
       </div>
-      <!-- <button type="button" class="btn btn-danger btn-lg col-5 bc-button" data-bs-toggle="modal"
-        data-bs-target="#exampleModal" data-bs-whatever="XXX">SEND A MESSAGE</button>
-
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Send me a Message</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-            <script>
-              hbspt.forms.create({
-                region: "na1",
-                portalId: "20507752",
-                formId: "13d54a5b-bebf-4f12-94ed-6c4f3a2754e0"
-              });
-            </script>
-          </div>
-        </div>
-      </div> -->
     </div>
 
     <hr>
