--- a/market_update.html
+++ b/market_update.html
@@ -189,126 +189,48 @@
         </header>
     </div>
 
-
-    <!--**************************************Middle Container**************************************************-->
-    <div class="mid-container">
-        <article class="mb-4">
-            <div class="container px-5 px-lg-6">
-                <div class="row gx-8 gx-lg-9 justify-content-center">
-                    <div id="blog-p" class="blog-p col-md-11 col-lg-9 col-xl-8">
-                        <p>Never in all their history have men been able truly to conceive of the world as one: a single
-                            sphere, a
-                            globe, having the qualities of a globe, a round earth in which all the directions eventually
-                            meet, in
-                            which there is no center because every point, or none, is center — an equal earth which all
-                            men occupy as
-                            equals. The airman's earth, if free men make it, will be truly round: a globe in practice,
-                            not in theory.
-                        </p>
-                        <p>Science cuts two ways, of course; its products can be used for both good and evil. But
-                            there's no turning
-                            back from science. The early warnings about technological dangers also come from science.
-                        </p>
-                        <p>What was most significant about the lunar voyage was not that man set foot on the Moon but
-                            that they set
-                            eye on the earth.</p>
-                        <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty,
-                            become her
-                            protectors rather than her violators. That's how I felt seeing the Earth for the first time.
-                            I could not
-                            help but love and cherish her.</p>
-                        <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more
-                            who will,
-                            the experience most certainly changes your perspective. The things that we share in our
-                            world are far more
-                            valuable than those which divide us.</p>
-                        <h2 class="section-heading">The Final Frontier</h2>
-                        <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and
-                            literally, it is a
-                            task to occupy the generations. And no matter how much progress one makes, there is always
-                            the thrill of
-                            just beginning.</p>
-                        <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and
-                            literally, it is a
-                            task to occupy the generations. And no matter how much progress one makes, there is always
-                            the thrill of
-                            just beginning.</p>
-                        <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of
-                            tomorrow.
-                            Science has not yet mastered prophecy. We predict too much for the next year and yet far too
-                            little for
-                            the next ten.</blockquote>
-                        <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men.
-                            It is a
-                            historical process which mankind is carrying out in accordance with the natural laws of
-                            human development.
-                        </p>
-                        <h2 class="section-heading">Reaching for the Stars</h2>
-                        <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to
-                            the size of a
-                            marble, the most beautiful you can imagine. That beautiful, warm, living object looked so
-                            fragile, so
-                            delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this
-                            has to change
-                            a man.</p>
-                        <a href="#!"><img class="img-fluid" src="images/invest.webp" alt="..." /></a>
-                        <span class="caption text-muted">To go places and do things that have never been done before –
-                            that’s what
-                            living is all about.</span>
-                        <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year
-                            mission: to
-                            explore strange new worlds, to seek out new life and new civilizations, to boldly go where
-                            no man has gone
-                            before.</p>
-                        <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a
-                            fundamental
-                            truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-                        <p>
-                            Placeholder text by
-                            <a href="http://spaceipsum.com/">Space Ipsum</a>
-                            &middot; Images by
-                            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
-                        </p>
-
-                        <div class="stats">
-                            <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
-                            <div class="d-flex justify-content-center .d-none ">
-                                <iframe id="sale-price" style="border: 0;" width="350" height="500"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=350&h=500"></iframe>
-                            </div>
-                        </div>
-                        <div class="stats">
-                            <h2 class="section-heading">Kitchener-Waterloo Monthly Supply</h2>
-                            <div class="d-flex justify-content-center .d-none ">
-                                <iframe id="home-for-sale" style="border: 0;" width="350" height="500"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/raMi-rOq?w=350&h=500"></iframe>
-                            </div>
-                        </div>
-                        <div class="stats">
-                            <h2 class="section-heading">Kitchener-Waterloo Monthly Sold</h2>
-                            <div class="d-flex justify-content-center .d-none ">
-                                <iframe id="sold-stat" style="border: 0;" width="350" height="500"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/raiv-hp3?w=350&h=500"></iframe>
-                            </div>
-                        </div>
-                        <div class="stats">
-                            <h2 class="section-heading">Kitchener-Waterloo Days on Market</h2>
-                            <div class="d-flex justify-content-center .d-none ">
-                                <iframe id="days-on-market" style="border: 0;" width="640" height="480"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/raJZ-lYT?w=640&h=480"></iframe>
-                            </div>
-                        </div>
-                        <div class="stats">
-                            <h2 class="section-heading">More Stats from KWAR</h2>
-                            <div class="d-flex justify-content-center .d-none ">
-                                <iframe id="kwar-stat" id="home-for-sale" scrolling="yes" style="border: 0;" width="350"
-                                    height="500" src="https://kwar.ca/tag/stats/"></iframe>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+<!--**************************************Middle Container**************************************************-->
+<div class="mid-container">
+  <article class="mb-4">
+    <div class="container px-5 px-lg-6">
+      <div class="row gx-8 gx-lg-9 justify-content-center">
+        <div id="blog-p" class="blog-p col-md-11 col-lg-9 col-xl-8">
+          <p>Find out Stats of Kitchner-Waterloo Real Estate Market. Here you will see Median Sale Price, Monthly Supply, Monthly Sold, Days on Market and in-depth reports from Market professional directly from KWAR Real Estate board.
+            <br> <br>Bookmark this page to stay update date with Real estate market. 
+          </p>
+          <div class="stats">
+            <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
+            <div class="d-flex justify-content-center .d-none ">
+              <iframe id="sale-price" style="border: 0;" width="350" height="500" src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=350&h=500"></iframe>
             </div>
+          </div>
+          <div class="stats">
+            <h2 class="section-heading">Kitchener-Waterloo Monthly Supply</h2>
+            <div class="d-flex justify-content-center .d-none ">
+              <iframe id="home-for-sale" style="border: 0;" width="350" height="500" src="https://itso.stats.showingtime.com/infoserv/s-v1/raMi-rOq?w=350&h=500"></iframe>
+            </div>
+          </div>
+          <div class="stats">
+            <h2 class="section-heading">Kitchener-Waterloo Monthly Sold</h2>
+            <div class="d-flex justify-content-center .d-none ">
+              <iframe id="sold-stat" style="border: 0;" width="350" height="500" src="https://itso.stats.showingtime.com/infoserv/s-v1/raiv-hp3?w=350&h=500"></iframe>
+            </div>
+          </div>
+          <div class="stats">
+            <h2 class="section-heading">Kitchener-Waterloo Days on Market</h2>
+            <div class="d-flex justify-content-center .d-none ">
+              <iframe id="days-on-market" style="border: 0;" width="640" height="480" src="https://itso.stats.showingtime.com/infoserv/s-v1/raJZ-lYT?w=640&h=480"></iframe>
+            </div>
+          </div>
+          <div class="stats">
+            <h2 class="section-heading">More Stats from KWAR</h2>
+            <div class="d-flex justify-content-center .d-none ">
+              <iframe id="kwar-stat" id="home-for-sale" scrolling="yes" style="border: 0;" width="350" height="500" src="https://kwar.ca/tag/stats/"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
         </article>
     </div>
 
