Buying-tips page

--- a/reviews.html
+++ b/reviews.html
@@ -202,11 +202,11 @@
             <div class="owl-carousel owl-theme">
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> 
-                            <span class="fa fa-star active-star"></span> 
-                            <span class="fa fa-star active-star"></span> 
+                        <div class="mt-2">
                             <span class="fa fa-star active-star"></span>
-                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
                         </div>
                         <div class="main font-weight-bold pb-2 pt-1">Great Service</div>
@@ -225,9 +225,9 @@
                 </div>
                 <div class="owl-item">
                     <div class="card d-flex flex-column">
-                        <div class="mt-2"> 
-                            <span class="fa fa-star active-star"></span> 
-                            <span class="fa fa-star active-star"></span> 
+                        <div class="mt-2">
+                            <span class="fa fa-star active-star"></span>
+                            <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
@@ -253,15 +253,15 @@
                             <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
-                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span>
                         </div>
                         <div class="main font-weight-bold pb-2 pt-1">Humble person</div>
-                        <div class="testimonial"> Very prompt with his reply. Malav has patience to listern to all my questions. </div>
+                        <div class="testimonial"> Malav helped me to find the right place at the right time in very competitive market. Very humble and customer focused service by him. It is great experience to work with him in past and I will choose him in future for any real estate need. Strongly Recommnded! </div>
                         <div class="d-flex flex-row profile pt-4 mt-auto"> <img
                                 src="images/icons/man-2.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
-                                <div class="name">James</div>
+                                <div class="name">Nirav</div>
                                 <p class="text-muted designation">Commercial</p>
                             </div>
                         </div>
@@ -293,7 +293,7 @@
                             <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
                             <span class="fa fa-star active-star"></span>
-                            <span class="fa fa-star active-star"></span> 
+                            <span class="fa fa-star active-star"></span>
                         </div>
                         <div class="main font-weight-bold pb-2 pt-1">Amazing Person</div>
                         <div class="testimonial"> Amazing person to work with. Malav helped me with finding an Rental
@@ -302,7 +302,7 @@
                                 src="images/icons/man-2.png"
                                 alt="" class="rounded-circle">
                             <div class="d-flex flex-column pl-2">
-                                <div class="name">Shell Kumar</div>
+                                <div class="name">Shell</div>
                                 <p class="text-muted designation">Lease</p>
                             </div>
                         </div>
