Buying - tips added a image

--- a/buying_tips.html
+++ b/buying_tips.html
@@ -361,6 +361,7 @@
               borrowed amount must be repaid within 15 years
               to avoid paying a penalty.<br><br>
 
+              <img class="img-fluid" src="images\land-survey.jpg" width="100%" alt="closing-cost"/><br><br>
               21. <b>Land Survey:</b> A land survey will identify the
               property lines. This is not required to purchase
               a home, but it is recommended and may be
