--- a/home_staging.html
+++ b/home_staging.html
@@ -299,7 +299,7 @@
                               9. A fresh coat of paint will help renew the look and feel of any room. Choose 2 to 3 different neutrals to use throughout the whole house.<br>
                               10. Don’t forget the exterior!
                             </p>
-                            <img class="img-fluid" src="images\Realtor-key.png" width="100%" height="50%" alt="Home-seller-glossary" />
+                            <img class="img-fluid" src="images\Realtor-key.png" width="100%" alt="Home-seller-glossary" />
                         </div>
                     </div>
                 </div>
