--- a/evalution.html
+++ b/evalution.html
@@ -185,10 +185,8 @@
 
   <!--**************************************Middle Container**************************************************-->
   <div class="mid-container">
-    <article class="mb-4">
-      <div class="container px-5 px-lg-6">
-        <div class="row gx-8 gx-lg-7 justify-content-center">
-          <div class="blog-p col-md-11 col-lg-9 col-xl-8">
+    <img class="img-fluid" src="images\Home-Worth.webp" width="80%" alt="Home-Worth" />
+
             <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
             <script>
               hbspt.forms.create({
@@ -197,10 +195,6 @@
                 formId: "4f3a84fb-26d6-44e0-a731-41403e00f288"
               });
             </script>
-          </div>
-        </div>
-      </div>
-    </article>
   </div>
 
 
