updating logo and copyright to 2024

--- a/business_card.html
+++ b/business_card.html
@@ -193,7 +193,7 @@
     <hr style="margin:0px 0px 0px 80px">
     <div class="container-fluid d-flex justify-content-start social-bar">
       <a href="https://goo.gl/maps/mPXS3qEFw7XnXWqV8">
-        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-left:6px;">83 Erb St W, Waterloo
+        <img class="social-icon" src="images\icons\map.png" alt="map" style="padding-left:6px;">450 Hespeler Rd unit G-107 & G-108, Cambridge
       </a>
     </div>
     <hr style="margin:0px 0px 0px 80px">
@@ -225,7 +225,7 @@
     <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
       <img class="remax-logo" src="images\remax-logo.png" alt="remax-logo">
     </a>
-    <p class="copyright">© 2022 Malav Panchal.</p>
+    <p class="copyright">© 2024 Malav Panchal.</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
