--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
       <div class="hours col">
         <h2>Location & Hours</h2>
-        <p class="address" id="address">83 Erb St W,<br>Waterloo, ON N2L 6C2</p>
+        <p class="address" id="address">450 Hespeler Rd unit G-107 & G-108,<br>Cambridge, ON N1R 0E3</p>
       </div>
       <div class="col">
         <table class="table d-inline-flex justify-content-center">
@@ -274,7 +274,7 @@
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
     <a href="tel:+16477084395" class="fa fa-mobile"></a>
-    <p class="copyright">© 2022 Malav Panchal.</p>
+    <p class="copyright">© 2024 Malav Panchal.</p>
   </div>
 
 
