--- a/contact.html
+++ b/contact.html
@@ -185,11 +185,11 @@
 
       <div class="row top-buffer">
         <div class="col-lg-4">
-          <p><a href="https://goo.gl/maps/vvy8qvX4M38NLnsx6">
+          <p><a href="https://maps.app.goo.gl/9XrgSp1gmhaDdUyp8">
               <img src="images\map.png" alt="map">
             </a></p>
           <h2>Our Office</h2>
-          <p><a href="https://goo.gl/maps/hR7n9zEV43asr4g26">83 Erb St W, Waterloo, ON N2L 6C2</a></p>
+          <p><a href="https://maps.app.goo.gl/9XrgSp1gmhaDdUyp8">450 Hespeler Rd unit G-107 & G-108, Cambridge, ON N1R 0E3</a></p>
         </div>
         <div class="col-lg-4">
           <p><a href="tel:+16477084395">
@@ -236,7 +236,7 @@
     <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
     <a href="https://www.snapchat.com/add/malav_panchal" class="fa fa-snapchat-ghost"></a>
     <a href="tel:+16477084395" class="fa fa-mobile"></a>
-    <p class="copyright">© 2022 Malav Panchal.</p>
+    <p class="copyright">© 2024 Malav Panchal.</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
