updating digital bc, vcf, link in market_update.html

--- a/market_update.html
+++ b/market_update.html
@@ -223,9 +223,9 @@
             </div>
           </div>
           <div class="stats">
-            <h2 class="section-heading">More Stats from KWAR</h2>
+            <h2 class="section-heading">More Stats from Waterloo Region Real Estate</h2>
             <div class="d-flex justify-content-center .d-none ">
-              <iframe id="kwar-stat" id="home-for-sale" scrolling="yes" style="border: 0;" width="350" height="500" src="https://kwar.ca/tag/stats/"></iframe>
+              <iframe id="kwar-stat" id="home-for-sale" scrolling="yes" style="border: 0;" width="350" height="500" src="https://wrar.ca/category/market-stats/"></iframe>
             </div>
           </div>
         </div>
