updating logo link

--- a/reviews.html
+++ b/reviews.html
@@ -316,7 +316,7 @@
 
     <!--**************************************Bottom Container**************************************************-->
     <div class="bottom-container">
-        <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
+        <a href="https://www.homelifemiracle.com/Malav-Panchal">
             <img class="remax-logo" src="images\remax-logo.png" alt="remax-logo">
         </a>
         <hr>
