--- a/business_card.html
+++ b/business_card.html
@@ -222,7 +222,7 @@
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bc-bottom-container">
-    <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
+    <a href="https://www.homelifemiracle.com/Malav-Panchal">
       <img class="remax-logo" src="images\remax-logo.png" alt="remax-logo">
     </a>
     <p class="copyright">© 2024 Malav Panchal.</p>
