--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
   <!--**************************************Bottom Container**************************************************-->
   <div class="bottom-container">
-    <a href="https://www.remaxtwincity.ca/agent/malav-panchal">
+    <a href="https://www.homelifemiracle.com/Malav-Panchal">
       <img class="remax-logo pt-1" src="images\remax-logo.png" alt="remax-logo">
     </a>
     <hr>
