updating mortage calcualtor

--- a/mortgage_calculator.html
+++ b/mortgage_calculator.html
@@ -175,10 +175,7 @@
 
     <!--**************************************Middle Container**************************************************-->
     <div class="middle-container">
-        <div>            
-            <div style="width:960px; position:relative; margin: auto; padding-top: 5%;">
-            <iframe src="https://www.mortgagecalculator.net/embeddable/v2/?size=1" width="100%" frameborder=0 scrolling=no height=500></iframe>
-        </div>
+        <!-- Amortization Calculator Widget START --><script src="https://usmortgagecalculator.org/widget/2.0/js/amortizationcalc-loader.min.js" type="text/javascript"></script><div id="acww-widgetwrapper" style="min-width:250px;width:100%;padding-top: 5%; padding-bottom: 5%;"><div id="acww-widget" style="position:relative;padding-top:0;padding-bottom:280px;height:0;overflow:hidden;"></div><div id="acww-more" style="background:#333;font:normal 13px/1 Helvetica, Arial, Verdana, Sans-serif;padding:10px 0;color:#FFF;text-align:center;width:100%;clear:both;margin:0;clear:both;float:left;"></div></div><!-- Amortization Calculator Widget END -->
     </div>
 
 
